First attempt to add support for Java 17 and 20, including using Java 20 foreign memory api