@@ -87,6 +87,11 @@ cd "${DIST_BIN_DIR}"
 
 # Test standalone pinot. Configure JAVA_OPTS for smaller memory, and don't use System.exit
 export JAVA_OPTS="-Xms1G -Dlog4j2.configurationFile=conf/log4j2.xml"
+
+if [ "$PINOT_JAVA_VERSION" -ge "11" ]; then
+  JAVA_OPTS="${JAVA_OPTS} --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+fi
+
 bin/pinot-admin.sh StartZookeeper &
 ZK_PID=$!
 sleep 10
